# short-linker

./: README.md  pyproject.toml  tox.ini
conf/: config.toml
src/short_linker/: config.py  constants.py  server.py
src/short_linker/db/: orm.py  referencesmanager.py  session.py
